refactor: Some general housekeeping.